<?xml version="1.0" encoding="utf-8"?>
<android.gesture.GestureOverlayView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/gOverlay"
    android:eventsInterceptionEnabled="true"
    android:gestureStrokeType="multiple"
    android:layout_gravity="center_vertical">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="198dp"
        android:layout_marginRight="198dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="224dp"
            android:layout_height="146dp"
            android:layout_marginEnd="198dp"
            android:layout_marginRight="198dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="84dp"
                android:text="@string/from"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="84dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/editText_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/from_number"
            android:inputType="textPersonName"
            tools:ignore="Autofill" />

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="224dp"
            android:layout_height="146dp"
            android:layout_marginEnd="198dp"
            android:layout_marginRight="198dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:layout_marginLeft="72dp"
                android:layout_marginTop="100dp"
                android:text="@string/to"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="100dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/editText_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="24dp"
            android:text="@string/to_number"
            android:textSize="18sp" />


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginLeft="72dp"
            android:layout_marginTop="100dp"
            android:enabled="true"
            android:onClick="calcButton"
            android:text="@string/button_calc"
            android:textSize="18sp" />



    </LinearLayout>

</android.gesture.GestureOverlayView >